--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             </i>
         </marquee>
         <audio autoplay loop>
-            <source src="takbiran.mp3" type="audio/mp3"></audio>
+            <source src="Takbiran_25mb.mp3" type="audio/mp3"></audio>
         </body>
      </head>
 </html>
