--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h2>MINAL AIDZIN WALFAIDZIN MOHON MAAF LAHIR DAN BATIN</h2>
             </i>
         </marquee>
-        <audio autoplay loop>
+        <audio controls loop>
             <source src="Takbiran_25mb.mp3" type="audio/mp3"></audio>
         </body>
      </head>
